[tool.poetry]
name = "veriflow"
version = "0.1.0"
description = ""
authors = ["Faried Abu Zaid <fariedaz@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "scripts"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bayesian-optimization = "^1.4.3"
click = "^8.1.6"
fsspec = "^2023.6.0"
idx2numpy = "^1.2.3"
jsonargparse = "^4.27.5"
jupyter-server = "^2.10.1"
kaleido = "0.2.1"
matplotlib = "^3.8.0"
numpy = "^1.25.1"
onnx = "^1.14.1"
pandas = "^2.0.3"
plotly = "^5.18.0"
pyarrow = "^12.0.1"
pyro-ppl = "^1.8.5"
ray = "^2.5.1"
rise = "^5.7.1"
scikit-learn = "^1.3.0"
sphinxcontrib-napoleon = "^0.7"
tensorboard = "^2.15.1"
tensorboardx = "^2.6.1"
torch = "^2.0.1"
torchaudio = "^2.0.2"
torchvision = "^0.15.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
matplotlib = "^3.7.2"
notebook = "6.4.8"
pytest = "^7.4.0"
spellchecker = "^0.4"
tensorboard = "^2.14.0"
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]